@@ -71,6 +71,8 @@ ECL 9.5:
  - Some functions got new names: ecl_make_cfun, ecl_make_cfun_va,
    ecl_make_cclosure_va, ecl_def_c_function, ecl_def_c_function_va.
 
+ - Compiled functions now carry information about their source file.
+
 * Bugs fixed:
 
  - Remove an obsolete #if statement for Solaris that broke current builds
